<resources>
    <string name="app_name">SP500 Stocks</string>

    <!-- general -->
    <string name="sure_exit">Press again to exit</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="refresh">Refresh</string>

    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="min_percent">Min %</string>
    <string name="max_percent">Max %</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- menu -->
    <string name="header_title">Navigator</string>
    <string name="sectors">Sectors</string>
    <string name="filter">Filter</string>
    <string name="key_figures">Key Figures</string>

    <!-- key figures -->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="clear_sorting">Clear</string>


    <string name="market_cap">Market Cap</string>
    <string name="beta">Beta</string>
    <string name="dividend_yield">Dividend Yield</string>
    <string name="return_on_equity">Return on Equity</string>
    <string name="return_on_assets">Return on Assets</string>
    <string name="pe_ratio">PE Ratio</string>
    <string name="profit_margin">Profit Margin</string>

    <string name="change_5_y">5Y Change</string>
    <string name="change_2_y">2Y Change</string>
    <string name="change_1_y">1Y Change</string>
    <string name="change_ytd">YTD Change</string>
    <string name="change_6_m">6M Change</string>
    <string name="change_3_m">3M Change</string>
    <string name="change_1_m">1M Change</string>
    <string name="change_30_d">30D Change</string>
    <string name="change_5_d">5D Change</string>

</resources>
